--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yoga Enrollment App</title>
+  <!-- <link rel="stylesheet" href="../src/App.css"> -->
 </head>
 
 <body>
